--- a/React_Native/First-Project/app.json
+++ b/React_Native/First-Project/app.json
@@ -3,7 +3,7 @@
     "name": "First-Project",
     "slug": "First-Project",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "default",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
