--- a/React_Native/First-Project/package.json
+++ b/React_Native/First-Project/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
+    "@react-native-community/hooks": "^3.0.0",
     "expo": "~51.0.17",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.2",
+    "react-native": "^0.74.3",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
