--- a/React_Native/First-Project/package.json
+++ b/React_Native/First-Project/package.json
@@ -12,6 +12,7 @@
     "@expo/metro-runtime": "~3.2.1",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-community/hooks": "^3.0.0",
+    "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.17",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
