--- a/React/React-Project/package.json
+++ b/React/React-Project/package.json
@@ -9,10 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1"
+    "react-hook-form": "^7.52.1",
+    "react-scripts": "^5.0.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
